feat: add slackId to an existing event (#129)
